--- a/SAA/SAA 101-350.md
+++ b/SAA/SAA 101-350.md
@@ -470,6 +470,7 @@ Which combination of configuration options will meet these requirements? (Choose
 AB
 放在public还是private subnet得看是否直接接受来自Internet的访问
 
+## 126-150
 ### 126
 
 A solutions architect needs to implement a solution to reduce a company's storage costs. All the company's data is in the Amazon S3 Standard storage class. The company must keep all data for at least 25 years. Data from the most recent 2 years must be highly available and immediately retrievable.  
@@ -873,6 +874,7 @@ CloudWatch Synthetics canaries is useful for actively monitoring the application
 
 A
 
+## 151 - 175
 ### 151
 A company wants to migrate its on-premises data center to AWS. According to the company's compliance requirements, the company can use only the ap-northeast-3 Region. Company administrators are not permitted to connect VPCs to the internet.
 Which solutions will meet these requirements? (Choose two.)
@@ -1034,13 +1036,382 @@ Cost-effective solution with milliseconds of retrieval -> it should be s3 standa
 A company has a small Python application that processes JSON documents and outputs the results to an on-premises SQL database. The application runs thousands of times each day. The company wants to move the application to the AWS Cloud. The company needs a highly available solution that maximizes scalability and minimizes operational overhead.
 Which solution will meet these requirements?
 
-A. Place the JSON documents in an Amazon S3 bucket. Run the Python code on multiple Amazon EC2 instances to process the documents.
-Store the results in an Amazon Aurora DB cluster.
-B. Place the JSON documents in an Amazon S3 bucket. Create an AWS Lambda function that runs the Python code to process the documents
-as they arrive in the S3 bucket. Store the results in an Amazon Aurora DB cluster.
-C. Place the JSON documents in an Amazon Elastic Block Store (Amazon EBS) volume. Use the EBS Multi-Attach feature to attach the volume
-to multiple Amazon EC2 instances. Run the Python code on the EC2 instances to process the documents. Store the results on an Amazon RDS
+A. Place the JSON documents in an Amazon S3 bucket. Run the Python code on multiple Amazon EC2 instances to process the documents. Store the results in an Amazon Aurora DB cluster.
+B. Place the JSON documents in an Amazon S3 bucket. Create an AWS Lambda function that runs the Python code to process the documents as they arrive in the S3 bucket. Store the results in an Amazon Aurora DB cluster.
+C. Place the JSON documents in an Amazon Elastic Block Store (Amazon EBS) volume. Use the EBS Multi-Attach feature to attach the volume to multiple Amazon EC2 instances. Run the Python code on the EC2 instances to process the documents. Store the results on an Amazon RDS
 DB instance.
-D. Place the JSON documents in an Amazon Simple Queue Service (Amazon SQS) queue as messages. Deploy the Python code as a container
-on an Amazon Elastic Container Service (Amazon ECS) cluster that is configured with the Amazon EC2 launch type. Use the container to
-process the SQS messages. Store the results on an Amazon RDS DB instance.
+D. Place the JSON documents in an Amazon Simple Queue Service (Amazon SQS) queue as messages. Deploy the Python code as a container on an Amazon Elastic Container Service (Amazon ECS) cluster that is configured with the Amazon EC2 launch type. Use the container to process the SQS messages. Store the results on an Amazon RDS DB instance.
+
+B
+
+solution should remove operation overhead -> s3 -> lambda -> aurora
+
+### 162
+A company wants to use high performance computing (HPC) infrastructure on AWS for financial risk modeling. The company’s HPC workloads run on Linux. Each HPC workflow runs on hundreds of Amazon EC2 Spot Instances, is short-lived, and generates thousands of output files that are ultimately stored in persistent storage for analytics and long-term future use.
+The company seeks a cloud storage solution that permits the copying of on-premises data to long-term persistent storage to make data available
+for processing by all EC2 instances. The solution should also be a high performance file system that is integrated with persistent storage to read
+and write datasets and output files.
+Which combination of AWS services meets these requirements?
+A. Amazon FSx for Lustre integrated with Amazon S3
+B. Amazon FSx for Windows File Server integrated with Amazon S3
+C. Amazon S3 Glacier integrated with Amazon Elastic Block Store (Amazon EBS)
+D. Amazon S3 bucket with a VPC endpoint integrated with an Amazon Elastic Block Store (Amazon EBS) General Purpose SSD (gp2) volume
+
+A
+
+### 163
+A company is building a containerized application on premises and decides to move the application to AWS. The application will have thousands of users soon after it is deployed. The company is unsure how to manage the deployment of containers at scale. The company needs to deploy the containerized application in a highly available architecture that minimizes operational overhead.
+Which solution will meet these requirements?
+A. Store container images in an Amazon Elastic Container Registry (Amazon ECR) repository. Use an Amazon Elastic Container Service (Amazon ECS) cluster with the [[AWS Fargate]] launch type to run the containers. Use target tracking to scale automatically based on demand.
+B. Store container images in an Amazon Elastic Container Registry (Amazon ECR) repository. Use an Amazon Elastic Container Service (Amazon ECS) cluster with the Amazon EC2 launch type to run the containers. Use target tracking to scale automatically based on demand.
+C. Store container images in a repository that runs on an Amazon EC2 instance. Run the containers on EC2 instances that are spread across multiple Availability Zones. Monitor the average CPU utilization in Amazon CloudWatch. Launch new EC2 instances as needed.
+D. Create an Amazon EC2 Amazon Machine Image (AMI) that contains the container image. Launch EC2 instances in an Auto Scaling group
+across multiple Availability Zones. Use an Amazon CloudWatch alarm to scale out EC2 instances when the average CPU utilization threshold
+is breached.
+
+A
+
+ECR+ECS+Fargate = Less overhead
+
+### 164
+A company has two applications: a sender application that sends messages with payloads to be processed and a processing application intended to receive the messages with payloads. The company wants to implement an AWS service to handle messages between the two applications. The sender application can send about 1,000 messages each hour. The messages may take up to 2 days to be processed: If the messages fail to process, they must be retained so that they do not impact the processing of any remaining messages.
+Which solution meets these requirements and is the MOST operationally efficient?
+A. Set up an Amazon EC2 instance running a Redis database. Configure both applications to use the instance. Store, process, and delete the
+messages, respectively.
+B. Use an [[Amazon Kinesis]] data stream to receive the messages from the sender application. Integrate the processing application with the
+Kinesis Client Library (KCL).
+C. Integrate the sender and processor applications with an Amazon Simple Queue Service (Amazon SQS) queue. Configure a dead-letter queue to collect the messages that failed to process.
+D. Subscribe the processing application to an Amazon Simple Notification Service (Amazon SNS) topic to receive notifications to process. Integrate the sender application to write to the SNS topic.
+
+C
+
+A) Not operationally efficient
+B) Kinesis is for real-time processing
+D) SNS is not suitable for work queuing.
+
+[[Amazon SQS#DLQ]]
+
+### 165
+A solutions architect must design a solution that uses Amazon CloudFront with an Amazon S3 origin to store a static website. The company’s security policy requires that all website traffic be inspected by [[AWS WAF]].
+How should the solutions architect comply with these requirements?
+A. Configure an S3 bucket policy to accept requests coming from the AWS WAF Amazon Resource Name (ARN) only.
+B. Configure Amazon CloudFront to forward all incoming requests to AWS WAF before requesting content from the S3 origin.
+C. Configure a security group that allows Amazon CloudFront IP addresses to access Amazon S3 only. Associate AWS WAF to CloudFront.
+D. Configure Amazon CloudFront and Amazon S3 to use an origin access identity (OAI) to restrict access to the S3 bucket. Enable AWS WAF on the distribution.
+
+D
+**Restricting Access to the S3 Bucket**:
+- Using an **Origin Access Identity (OAI)** ensures that only CloudFront can access the S3 bucket directly. This means users can’t bypass CloudFront (and therefore AWS WAF) to access the S3 content directly.
+**Enabling AWS WAF on CloudFront**:
+- **AWS WAF** can be enabled directly on the CloudFront distribution. When requests come through CloudFront, they are inspected by AWS WAF before reaching the S3 bucket.
+
+OAI
+https://repost.aws/ja/knowledge-center/cloudfront-access-to-amazon-s3
+
+Integrate [[AWS WAF]] to prevent direct access to origin
+https://aws.amazon.com/jp/blogs/security/how-to-enhance-amazon-cloudfront-origin-security-with-aws-waf-and-aws-secrets-manager/
+
+why B wrong:
+CloudFront does not “forward” requests to AWS WAF; instead, AWS WAF is applied directly on the CloudFront distribution. So this option is not feasible.
+
+### 166
+Organizers for a global event want to put daily reports online as static HTML pages. The pages are expected to generate millions of views from users around the world. The files are stored in an Amazon S3 bucket. A solutions architect has been asked to design an efficient and effective solution.
+Which action should the solutions architect take to accomplish this?
+A. Generate presigned URLs for the files.
+B. Use cross-Region replication to all Regions.
+C. Use the geoproximity feature of Amazon Route 53.
+D. Use Amazon CloudFront with the S3 bucket as its origin.
+D
+### 167
+A company runs a production application on a fleet of Amazon EC2 instances. The application reads the data from an Amazon SQS queue and processes the messages in parallel. The message volume is unpredictable and often has intermittent traffic. This application should continually
+**process messages without any downtime.** -> kill the spot option
+Which solution meets these requirements MOST cost-effectively?
+A. Use Spot Instances exclusively to handle the maximum capacity required.
+B. Use Reserved Instances exclusively to handle the maximum capacity required.
+C. Use Reserved Instances for the baseline capacity and use Spot Instances to handle additional capacity.
+D. Use Reserved Instances for the baseline capacity and use On-Demand Instances to handle additional capacity.
+
+[[Amazon EC2#Fleet]]
+
+C
+> intermittent:  occurring at irregular intervals; not continuous or steady.
+### 168
+A security team wants to limit access to specific services or actions in all of the team’s AWS accounts. All accounts belong to a large organization in AWS Organizations. The solution must be scalable and there must be a single point where permissions can be maintained. 
+What should a solutions architect do to accomplish this?
+A. Create an ACL to provide access to the services or actions.
+B. Create a security group to allow accounts and attach it to user groups.
+C. Create cross-account roles in each account to deny access to the services or actions.
+D. Create a service control policy in the root organizational unit to deny access to the services or actions.
+
+D
+
+D. Service control policies (SCPs) are one type of policy that you can use to manage your organization. SCPs offer central control over the maximum available permissions for all accounts in your organization, allowing you to ensure your accounts stay within your organization's access control guidelines.
+See https://docs.aws.amazon.com/organizations/latest/userguide/orgs_manage_policies_scp.html.
+
+### 169
+A company is concerned about the security of its public web application due to recent web attacks. The application uses an Application Load Balancer (ALB). A solutions architect must reduce the risk of DDoS attacks against the application.
+What should the solutions architect do to meet this requirement?
+A. Add an [[Amazon Inspector]] agent to the ALB.
+B. Configure [[Amazon Macie]] to prevent attacks.
+C. Enable AWS Shield Advanced to prevent attacks.
+D. Configure [[Amazon GuardDuty]] to monitor the ALB.
+
+C
+When you see DDOS immediately think Shield
+### 170
+A company’s web application is running on Amazon EC2 instances behind an Application Load Balancer. The company recently changed its policy, which now requires the application to be accessed from one specific country only.
+Which configuration will meet this requirement?
+A. Configure the security group for the EC2 instances.
+B. Configure the security group on the Application Load Balancer.
+C. Configure [[AWS WAF]] on the Application Load Balancer in a VPC.
+D. Configure the network ACL for the subnet that contains the EC2 instances.
+
+C
+
+Geographic (Geo) Match Conditions in AWS WAF. This new condition type allows you to use AWS WAF to restrict application access based on the
+geographic location of your viewers. With geo match conditions you can choose the countries from which AWS WAF should allow access.
+https://aws.amazon.com/about-aws/whats-new/2017/10/aws-waf-now-supports-geographic-match/
+
+[[Network ACL]]s primarily control traffic at the subnet level based on IP
+addresses and port numbers, but they do not have built-in capabilities for country-based filtering.
+
+### 171
+A company provides an API to its users that automates inquiries for tax computations based on item prices. The company experiences a larger
+number of inquiries during the holiday season only that cause slower response times. A solutions architect needs to design a solution that is
+scalable and elastic.
+What should the solutions architect do to accomplish this?
+A. Provide an API hosted on an Amazon EC2 instance. The EC2 instance performs the required computations when the API request is made.
+B. Design a REST API using Amazon API Gateway that accepts the item names. API Gateway passes item names to AWS Lambda for tax
+computations.
+C. Create an Application Load Balancer that has two Amazon EC2 instances behind it. The EC2 instances will compute the tax on the received
+item names.
+D. Design a REST API using Amazon API Gateway that connects with an API hosted on an Amazon EC2 instance. API Gateway accepts and
+passes the item names to the EC2 instance for tax computations.
+
+B
+
+Option D is similar to option B in that it uses Amazon API Gateway to handle the API requests, but it also includes an EC2 instance to perform the tax computations. However, using an EC2 instance in this way is less scalable and less elastic than using AWS Lambda to perform the computations An EC2 instance is a fixed resource and requires manual scaling and management, while Lambda is an event-driven, serverless compute service tha automatically scales with the number of requests, making it more suitable for handling variable workloads and reducing response times during high traffic periods. Additionally, Lambda is more cost-efficient than EC2 instances, as you only pay for the compute time consumed by your functions, making it a more cost-effective solution.
+
+### 172
+A solutions architect is creating a new Amazon CloudFront distribution for an application. Some of the information submitted by users is sensitive. The application uses HTTPS but needs another layer of security. The sensitive information should.be protected throughout the entire application stack, and access to the information should be restricted to certain applications.
+Which action should the solutions architect take?
+A. Configure a [[Amazon CloudFront]] signed URL.
+B. Configure a CloudFront signed cookie.
+C. Configure a CloudFront field-level encryption profile.
+D. Configure CloudFront and set the Origin Protocol Policy setting to HTTPS Only for the Viewer Protocol Policy.
+[[Amazon CloudFront#signed URLs & signed cookies]]
+
+C
+
+Field-level encryption allows you to enable your users to securely upload sensitive information to your web servers. The sensitive information provided by your users is encrypted at the edge, close to the user, and remains encrypted throughout your entire application stack. This  encryption ensures that only applications that need the data—and have the credentials to decrypt it—are able to do so.
+
+### 173
+A gaming company hosts a browser-based application on AWS. The users of the application consume a large number of videos and images that are stored in Amazon S3. This content is the same for all users.
+The application has increased in popularity, and millions of users worldwide accessing these media files. The company wants to provide the files to the users while reducing the load on the origin.
+Which solution meets these requirements MOST cost-effectively?
+A. Deploy an AWS Global Accelerator accelerator in front of the web servers.
+B. Deploy an Amazon CloudFront web distribution in front of the S3 bucket.
+C. Deploy an Amazon ElastiCache for Redis instance in front of the web servers.
+D. Deploy an Amazon ElastiCache for Memcached instance in front of the web servers.
+
+B
+
+B. Cloud front is best for content delivery. Global Accelerator is best for non-HTTP (TCP/UDP) cases and supports HTTP cases as well but with static IP (elastic IP) or anycast IP address only.
+
+### 174
+A company has a multi-tier application that runs six front-end web servers in an Amazon EC2 Auto Scaling group in a single Availability Zone behind an Application Load Balancer (ALB). A solutions architect needs to modify the infrastructure to be highly available without modifying the application.
+Which architecture should the solutions architect choose that provides high availability?
+A. Create an Auto Scaling group that uses three instances across each of two Regions.
+B. Modify the Auto Scaling group to use three instances across each of two Availability Zones.
+C. Create an Auto Scaling template that can be used to quickly create more instances in another Region.
+D. Change the ALB in front of the Amazon EC2 instances in a [[Round-robin load balancing]] configuration to balance traffic to the web tier.
+
+B
+auto scaling groups can not span multi region
+
+### 175
+An ecommerce company has an order-processing application that uses Amazon API Gateway and an AWS Lambda function. The application stores data in an Amazon Aurora PostgreSQL database. During a recent sales event, a sudden surge in customer orders occurred. Some customers experienced timeouts, and the application did not process the orders of those customers.
+A solutions architect determined that the CPU utilization and memory utilization were high on the database because of a large number of open connections. The solutions architect needs to prevent the timeout errors while making the least possible changes to the application.
+Which solution will meet these requirements?
+A. Configure provisioned concurrency for the Lambda function. Modify the database to be a global database in multiple AWS Regions.
+B. Use Amazon RDS Proxy to create a proxy for the database. Modify the Lambda function to use the RDS Proxy endpoint instead of the database endpoint.
+C. Create a read replica for the database in a different AWS Region. Use query string parameters in API Gateway to route traffic to the read replica.
+D. Migrate the data from Aurora PostgreSQL to Amazon DynamoDB by using AWS Database Migration Service (AWS DMS). Modify the Lambda function to use the DynamoDB table.
+
+Many applications, including those built on modern serverless architectures, can have a large number of open connections to the database server and may open and close database connections at a high rate, exhausting database memory and compute resources. Amazon RDS Proxy allows applications to pool and share connections established with the database, improving database efficiency and application scalability.
+https://aws.amazon.com/id/rds/proxy/
+
+B
+
+## 176 -200
+### 176
+An application runs on Amazon EC2 instances in private subnets. The  application needs to access an Amazon DynamoDB table.
+What is the MOST secure way to access the table while ensuring that the traffic does not leave the AWS network?
+A. Use a VPC endpoint for DynamoDB.
+B. Use a NAT gateway in a public subnet.
+C. Use a NAT instance in a private subnet.
+D. Use the internet gateway attached to the VPC.
+A
+VPC endpoints for service in private subnets
+
+routing traffic through a network address translation (NAT) device, which requires an internet gateway and traverses the public
+internet.
+
+### 177
+An entertainment company is using Amazon DynamoDB to store media metadata. The application is read intensive and experiencing delays. The company does not have staff to handle additional operational overhead and needs to improve the performance efficiency of DynamoDB without reconfiguring the application.
+What should a solutions architect recommend to meet this requirement?
+A. Use Amazon ElastiCache for Redis.
+B. Use Amazon DynamoDB Accelerator (DAX).
+C. Replicate data by using DynamoDB global tables.
+D. Use Amazon ElastiCache for Memcached with Auto Discovery enabled.
+
+DAX stands for DynamoDB Accelerator, and it's like a turbo boost for your DynamoDB tables. It's a fully managed, in-memory cache that speeds up
+the read and write performance of your DynamoDB tables, so you can get your data faster than ever before.
+
+B
+### 178
+A company’s infrastructure consists of Amazon EC2 instances and an Amazon RDS DB instance in a single AWS Region. The company wants to back up its data in a separate Region.
+Which solution will meet these requirements with the LEAST operational overhead?
+A. Use AWS Backup to copy EC2 backups and RDS backups to the separate Region.
+B. Use Amazon Data Lifecycle Manager (Amazon DLM) to copy EC2 backups and RDS backups to the separate Region.
+C. Create Amazon Machine Images (AMIs) of the EC2 instances. Copy the AMIs to the separate Region. Create a read replica for the RDS DB instance in the separate Region.
+D. Create Amazon Elastic Block Store (Amazon EBS) snapshots. Copy the EBS snapshots to the separate Region. Create RDS snapshots. Export the RDS snapshots to Amazon S3. Configure S3 Cross-Region Replication (CRR) to the separate Region.
+
+A
+AWS Backup simplifies the backup process and automates the copying of backups to another Region,
+### 179
+A solutions architect needs to securely store a database user name and password that an application uses to access an Amazon RDS DB instance. The application that accesses the database runs on an Amazon EC2 instance. The solutions architect wants to create a secure parameter in AWS Systems Manager Parameter Store.
+What should the solutions architect do to meet this requirement?
+A. Create an IAM role that has read access to the Parameter Store parameter. Allow Decrypt access to an AWS Key Management Service (AWS KMS) key that is used to encrypt the parameter. Assign this IAM role to the EC2 instance.
+B. Create an IAM policy that allows read access to the Parameter Store parameter. Allow Decrypt access to an AWS Key Management Service
+(AWS KMS) key that is used to encrypt the parameter. Assign this IAM policy to the EC2 instance.
+C. Create an IAM trust relationship between the Parameter Store parameter and the EC2 instance. Specify Amazon RDS as a principal in the
+trust policy.
+D. Create an IAM trust relationship between the DB instance and the EC2 instance. Specify Systems Manager as a principal in the trust policy.
+
+IAM trust relationships are created between **IAM roles and principals**, not between individual AWS services or specific resources like Parameter Store parameters.
+
+A
+To securely store a database user name and password in AWS Systems Manager Parameter Store and allow an application running on an EC2 instance to access it, the solutions architect should create an IAM role that has read access to the Parameter Store parameter and allow Decrypt access to an AWS KMS key that is used to encrypt the parameter. The solutions architect should then assign this IAM role to the EC2 instance.
+This approach allows the EC2 instance to access the parameter in the Parameter Store and decrypt it using the specified KMS key while enforcing the necessary security controls to ensure that the parameter is only accessible to authorized parties.
+
+Option B, would not be sufficient, as IAM policies cannot be directly attached to EC2 instances
+
+An **AWS Trust Policy** is a JSON document attached to an AWS Identity and Access Management (IAM) role that defines _who (which entities)_ can assume or access that role. Essentially, it specifies _trust relationships_ by listing the AWS accounts, services, or users that are allowed to assume the role and perform actions on resources.
+- **Cross-account access**: Allowing roles in one account to access resources in another account.
+- **Service roles**: Allowing AWS services (like Lambda, EC2) to assume roles with specific permissions.
+
+### 180
+A company is designing a cloud communications platform that is driven by APIs. The application is hosted on Amazon EC2 instances behind a Network Load Balancer (NLB). The company uses Amazon API Gateway to provide external users with access to the application through APIs. The company wants to protect the platform against web exploits like SQL injection and also wants to detect and mitigate large, sophisticated DDoS attacks.
+Which combination of solutions provides the MOST protection? (Choose two.)
+A. Use [[AWS WAF]] to protect the NLB.
+B. Use [[AWS Shield]] Advanced with the NLB.
+C. Use AWS WAF to protect Amazon API Gateway.
+D. Use Amazon GuardDuty with AWS Shield Standard
+E. Use AWS Shield Standard with Amazon API Gateway.
+
+B C
+- Shield - EC2, ELB, Amazon CloudFront, AWS Global Accelerator, and Route 53.
+
+- WAF - Amazon CloudFront, ALB, Amazon API Gateway, and AWS AppSync
+**AWS WAF (Web Application Firewall)** can be used to protect API Gateway from web exploits such as SQL injection, cross-site scripting (XSS), and other Layer 7 attacks.
+**AWS Shield Advanced** provides comprehensive DDoS protection, including sophisticated, large-scale attacks. It protects against common DDoS attacks at both the network (Layer 3) and transport (Layer 4) layers.
+### 181
+A company has a legacy data processing application that runs on Amazon EC2 instances. Data is processed sequentially, but the order of results does not matter. The application uses a monolithic architecture. The only way that the company can scale the application to meet increased demand is to increase the size of the instances.
+The company’s developers have decided to rewrite the application to use a microservices architecture on Amazon Elastic Container Service (Amazon ECS).
+What should a solutions architect recommend for communication between the microservices?
+A. Create an Amazon Simple Queue Service (Amazon SQS) queue. Add code to the data producers, and send data to the queue. Add code to
+the data consumers to process data from the queue.
+B. Create an Amazon Simple Notification Service (Amazon SNS) topic. Add code to the data producers, and publish notifications to the topic. Add code to the data consumers to subscribe to the topic.
+C. Create an AWS Lambda function to pass messages. Add code to the data producers to call the Lambda function with a data object. Add code to the data consumers to receive a data object that is passed from the Lambda function.
+D. Create an Amazon DynamoDB table. Enable DynamoDB Streams. Add code to the data producers to insert data into the table. Add code to the data consumers to use the DynamoDB Streams API to detect new table entries and retrieve the data.
+
+A
+SQS 可以设计单次接收消息数
+
+SNS is a pub/sub messaging service that is designed for one-to-many communication, rather than point-to-point communication between specific microservices. multiple subscribers receive the same message.
+
+using an AWS Lambda function to pass messages, would not be suitable for this use case, as it would require the data producers and
+data consumers to have a direct connection and invoke the Lambda function, rather than being decoupled through a message queue.
+
+using an Amazon DynamoDB table with DynamoDB Streams, would not be suitable for this use case, as it would require the data
+consumers to continuously poll the DynamoDB Streams API to detect new table entries, rather than being notified of new data through a message
+queue.
+### 182
+A company wants to migrate its MySQL database from on premises to AWS. The company recently experienced a database outage that significantly impacted the business. To ensure this does not happen again, the company wants a reliable database solution on AWS that minimizes data loss and stores every transaction on at least two nodes.
+Which solution meets these requirements?
+
+A. Create an Amazon RDS DB instance with ==synchronous replication== to three nodes in three Availability Zones.
+B. Create an Amazon RDS MySQL DB instance with Multi-AZ functionality enabled to synchronously replicate the data.
+C. Create an Amazon RDS MySQL DB instance and then create a read replica in a separate AWS Region that synchronously replicates the data.
+D. Create an Amazon EC2 instance with a MySQL engine installed that triggers an AWS Lambda function to synchronously replicate the data to an Amazon RDS MySQL DB instance.
+
+B
+
+Read Replica always asynchronous. so option C is ignored.
+RDS Multi-AZ = Synchronous = Disaster Recovery (DR)
+Read Replica = Asynchronous = High Availability
+### 183
+A company is building a new dynamic ordering website. The company wants to minimize server maintenance and patching. The website must be highly available and must scale read and write capacity as quickly as possible to meet changes in user demand.
+Which solution will meet these requirements?
+A. Host static content in Amazon S3. Host dynamic content by using Amazon API Gateway and AWS Lambda. Use Amazon DynamoDB with on-demand capacity for the database. Configure Amazon CloudFront to deliver the website content.
+B. Host static content in Amazon S3. Host dynamic content by using Amazon API Gateway and AWS Lambda. Use Amazon Aurora with Aurora Auto Scaling for the database. Configure Amazon CloudFront to deliver the website content.
+C. Host all the website content on Amazon EC2 instances. Create an Auto Scaling group to scale the EC2 instances. Use an Application Load
+Balancer to distribute traffic. Use Amazon DynamoDB with provisioned write capacity for the database.
+D. Host all the website content on Amazon EC2 instances. Create an Auto Scaling group to scale the EC2 instances. Use an Application Load
+Balancer to distribute traffic. Use Amazon Aurora with Aurora Auto Scaling for the database.
+
+A - is correct, because Dynamodb on-demand scales write and read capacity
+
+B - Aurora auto scaling scales only read replicas
+https://docs.aws.amazon.com/AmazonRDS/latest/AuroraUserGuide/Aurora.Integrating.AutoScaling.html
+
+### 184
+A company has an AWS account used for software engineering. The AWS account has access to the company’s on-premises data center through a pair of AWS Direct Connect connections. All non-VPC traffic routes to the [[virtual private gateway]].
+A development team recently created an AWS Lambda function through the console. The development team needs to allow the function to access a database that runs in a private subnet in the company’s data center.
+Which solution will meet these requirements?
+
+A. Configure the Lambda function to run in the VPC with the appropriate security group.
+B. Set up a VPN connection from AWS to the data center. Route the traffic from the Lambda function through the VPN.
+C. Update the route tables in the VPC to allow the Lambda function to access the on-premises data center through Direct Connect.
+D. Create an Elastic IP address. Configure the Lambda function to send traffic through the Elastic IP address without an [[elastic network interface]].
+
+To configure a VPC for an existing function:
+1. Open the Functions page of the Lambda console.
+2. Choose a function.
+3. Choose Configuration and then choose VPC.
+4. Under VPC, choose Edit.
+5. Choose a VPC, subnets, and security groups. <-- **That's why I believe the answer is A**.
+Note:
+If your function needs internet access, use network address translation (NAT). Connecting a function to a public subnet doesn't give it internet
+access or a public IP address.
+
+C is not correct at all as in the question it metions that the VPC already has connectivity with on-premises, No need to do route updates. This is because the route to the destination on-premises is already set.
+### 185
+A company runs an application using Amazon ECS. The application creates resized versions of an original image and then makes Amazon S3 API calls to store the resized images in Amazon S3.
+How can a solutions architect ensure that the application has permission to access Amazon S3?
+A. Update the S3 role in AWS IAM to allow read/write access from Amazon ECS, and then relaunch the container.
+B. Create an IAM role with S3 permissions, and then specify that role as the taskRoleArn in the task definition.
+C. Create a security group that allows access from Amazon ECS to Amazon S3, and update the launch configuration used by the ECS cluster.
+D. Create an IAM user with S3 permissions, and then relaunch the Amazon EC2 instances for the ECS cluster while logged in as this account.
+
+### 186
+### 187
+### 188
+### 189
+### 190
+### 191
+### 192
+### 193
+### 194
+### 195
+### 196
+### 197
+### 198
+### 199
+### 200
+
+
+## 201-225
+
+## 226-250
